--- a/app/views/spree/static_content/show.html.erb
+++ b/app/views/spree/static_content/show.html.erb
@@ -12,15 +12,13 @@
   <% end -%>
 
   <% content_for :sidebar do %>
-    <% if defined? @products && defined? @taxon %>
-      <%= render :partial => "spree/shared/filters" %>
-    <% elsif defined? @taxonomies %>
+    <% if defined? @taxonomies %>
       <%= render :partial => "spree/shared/taxonomies" %>
     <% end %>
   <% end %>
 
-  <h1><%= @page.title %></h1>
-  <div id="page_content">
+  <div id="wysiwyhhh_content">
+    <%= image_tag @page.image.url if @page.image? %>
     <%= raw @page.body %>
   </div>
 <% end %>
