Change wysiwyg editor configuration

--- a/app/views/spree/admin/pages/_form.html.erb
+++ b/app/views/spree/admin/pages/_form.html.erb
@@ -128,7 +128,7 @@ var editor = new wysihtml5.Editor("page_body", { // id of textarea element
   stylesheets: ["<%= asset_path 'assets/spree/backend/wysihtml5.css' %>"],
   style: false,
   autoLink: true,
-  useLineBreaks: true,
+  useLineBreaks: false,
   cleanUp: true
 });
 </script>
