--- a/app/views/spree/admin/pages/_form.html.erb
+++ b/app/views/spree/admin/pages/_form.html.erb
@@ -19,7 +19,7 @@
       <a data-wysihtml5-command="bold" title="CTRL+B">bold</a>
       <a data-wysihtml5-command="italic" title="CTRL+I">italic</a>
       <a data-wysihtml5-command="insertUnorderedList">list</a>
-      <a data-wysihtml5-command="insertHTML" data-wysihtml5-command-value="<blockquote>foobar</blockquote>">quote</a>
+      <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="blockquote">quote</a>
       <a data-wysihtml5-command="createLink">insert link</a>
       <a data-wysihtml5-action="change_view">HTML</a>
       <a data-wysihtml5-command="foreColor" data-wysihtml5-command-value="pink">pink</a>
