Show original image instead of large version

--- a/app/views/spree/static_content/show.html.erb
+++ b/app/views/spree/static_content/show.html.erb
@@ -18,7 +18,7 @@
   <% end %>
 
   <div id="wysiwyhhh_content">
-    <%= image_tag @page.image.url if @page.image? %>
+    <%= image_tag @page.image.url(:original) if @page.image? %>
     <%= raw @page.body %>
   </div>
 <% end %>
